--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Amaya's React Template</title>
+    <title>React Template</title>
   </head>
 
   <body>
